# botifactory

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.gitea/workflows/: audit-on-push.yml  bloat.yml  container.yml  general.yml
.github/workflows/: audit-on-push.yml  bloat.yml  general.yml
.sqlx/: query-031b92876676e06292ae0d1490c19cf5d06c1798b8f5185c95ed865f504bb31b.json  query-1ad4d501c4dacb7e36e3f870a382a7cb4ffb71a668048f8ef9d4c56fb09986d8.json  query-37565fe8c6a63ee1d2b57496a5f151b1d23321e7fe157d58a286d1eab6300fd2.json  query-3c76c759b447fe8b042817e5c80da26f25c8ca11c6787d3995b5f53dd29ff316.json  query-55882873757bf333ac38a31bbe89385bc91625b1c3186f1dba5a51876435cfde.json  query-7f8ca97d8956a803f8213eb4c3dfcea7077e69d5f52cab04846b3b3749692cec.json  query-800d74e86d491b0767b48192febb976d40a6661f9130d2abf2f8c6c141cdac20.json  query-9443632eddbbb2c93b829aec70ee2223f8462c0fa819a7b50a05e5df14a87032.json  query-ae2f2e948ca654991be4f10f0417487fceba56c408d8c1765858c8e28809497c.json  query-fef551fb76425bd890f0274d25d75c4e63bcc17e297351bd0ab7504961b3572b.json
configuration/: base.toml  development.toml  production.toml
migrations/: 01_create_bb_bot_stable_channel.sql  01_create_bb_bot_unstable_channel.sql  01_create_channel_release_table.sql  01_create_project_channel_table.sql  01_create_project_table.sql  02_create_bb_bot_project.sql  03_create_project_channel_table.sql  04_create_bb_bot_stable_channel.sql  05_create_bb_bot_unstable_channel.sql  06_create_channel_release_table.sql
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: channel.rs  error.rs  health_check.rs  mod.rs  project.rs  release.rs
